# fedex

ka-kassistant-main/ka-kassistant-main/: CONTRIBUTING.md  Containerfile  README.md  alembic.ini  noxfile.py  pyproject.toml
ka-kassistant-main/ka-kassistant-main/migrations/: env.py
ka-kassistant-main/ka-kassistant-main/migrations/versions/: 1710772846-8213cad99c06_initialize_uuid_extension.py  1714053223-99fd0eb0a6a8_create_shipments_table.py  1735577333-e5ba6d3211a5_add_settings_table.py  1738116482-1447a72de5c3_add_label_size_to_settings.py  1751416111-d4700b5b6c18_store_k_erp_tracking_upload_response.py
ka-kassistant-main/ka-kassistant-main/scripts/: compose.yaml  entrypoint.sh
ka-kassistant-main/ka-kassistant-main/src/kassistant/: __init__.py  _types.py  constants.py  forms.py  kerp.py  run_labels.py  server.py
ka-kassistant-main/ka-kassistant-main/src/kassistant/fedex/: __init__.py  client.py  models.py
ka-kassistant-main/ka-kassistant-main/src/kassistant/orm/: __init__.py  base.py  settings.py  shipments.py
ka-kassistant-main/ka-kassistant-main/src/kassistant/orm/mixins/: __init__.py  timestamps.py
ka-kassistant-main/ka-kassistant-main/src/kassistant/web/: __init__.py  settings.py
ka-kassistant-main/ka-kassistant-main/src/kassistant/web/shipping/: __init__.py  fedex.py  history.py  shipments.py
ka-kassistant-main/ka-kassistant-main/static/: main.css  main.js
ka-kassistant-main/ka-kassistant-main/templates/: base.html  home.html  settings.html
ka-kassistant-main/ka-kassistant-main/templates/shipping/: history.html
ka-kassistant-main/ka-kassistant-main/templates/shipping/fedex/: form.html
ka-kassistant-main/ka-kassistant-main/tests/: test_fedex.py
